client reports & misc
* removed possible xss vuln with IP location data

* added about page

* changed how downtime is calculated

* added better source on dyn. IP's

* added external reporting back

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,21 @@ body {
 }
 
 
+.content.info {
+	width:50%;
+	margin:auto;
+}
+
+.content.info p, .content.info h3 {
+	color:white;
+	text-align: center;
+}
+
+.info p {
+	margin-bottom: 0px;
+}
+
+
 .cam {
 	width: 60%;
 	margin-left: 20%;
